# Wegis_server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  env.example  env.test  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: default_issue_template.md
.github/workflows/: cd.yml  ci.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
init-scripts/: 01-init-postgres.sql
mongo-init/: 01-init-mongo.js
scripts/: entrypoint.sh  init-redis.sh  lint.sh  run_tests.py
src/: __main__.py  database.py  enums.py  exceptions.py  logger.py  orm_models.py  server.py
src/api/: deps.py  main.py
src/api/routes/: analyze.py  feedback.py
src/clients/: mongo.py  redis.py
src/core/: config.py
src/schemas/: analyze.py  common.py  feedback.py
src/services/: analyzer.py  domain_checker.py
src/services/html/: loader.py
src/services/model/: manager.py  preprocessor.py  qbert.py  tokenizer.py
tests/: conftest.py  test_analyzer.py  test_api_routes.py  test_domain_checker.py  test_integration.py
