[project]
name = "wegis-server"
version = "0.1.0"
description = "CNN + BERT multimodal Phishing detection server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "apscheduler>=3.11.0",
    "beanie>=2.0.0",
    "beautifulsoup4>=4.13.5",
    "bs4>=0.0.2",
    "fastapi>=0.116.2",
    "html2text>=2025.4.15",
    "langdetect>=1.0.9",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.15.1",
    "pytest>=8.4.2",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.25",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]
