[project]
name = "wegis-server"
version = "0.1.0"
description = "CNN + BERT multimodal Phishing detection server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "apscheduler>=3.11.0",
    "beanie>=2.0.0",
    "beautifulsoup4>=4.13.5",
    "bs4>=0.0.2",
    "fastapi>=0.116.2",
    "html2text>=2025.4.15",
    "langdetect>=1.0.9",
    "motor>=3.7.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.15.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.25.0",
    "fakeredis>=2.21.0",
    "redis>=6.4.0",
    "selenium>=4.35.0",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.25",
    "tldextract>=5.3.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]
